--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,26 +2,34 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
-    - name: Build portforward
-      working-directory: ./portforward
-      run: go build -v ./...
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
-    - name: Test portforward
-      working-directory: ./portforward
-      run: go test -v ./...
+      - name: Build portforward
+        working-directory: ./portforward
+        run: go build -v ./...
+
+      - name: Test portforward
+        working-directory: ./portforward
+        run: go test -v ./...
